--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/themes": "^3.1.4",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
